// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReceiveFunds should not render qrcode without an address 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1nnbd55"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Receive Funds
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              <p
                class="mb-4"
              >
                Specify and confirm the amount to request.
              </p>
            </div>
            <div
              data-testid="ReceiveFunds__address"
            >
              <div
                class="no-ligatures flex css-s5w13h"
                data-testid="TransactionDetail"
              >
                <div
                  class="w-40 flex-1 space-y-2 whitespace-nowrap"
                  data-testid="TransactionDetail--desktop"
                >
                  <div
                    class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    Address
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <div
                      class="relative flex h-6 grow justify-start"
                    >
                      <div
                        class="absolute flex max-w-full items-center space-x-2 overflow-auto"
                      >
                        <div
                          class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                        />
                        <span
                          class="flex grow text-theme-primary-300 dark:text-theme-secondary-600"
                        >
                          <button
                            class="ring-focus relative focus:outline-none"
                            data-ring-focus-margin="-m-1"
                            data-testid="clipboard-icon__wrapper"
                            type="button"
                          >
                            <div
                              class="css-v0ob3f"
                              height="16"
                              width="16"
                            >
                              <svg>
                                copy.svg
                              </svg>
                            </div>
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="-space-x-1 whitespace-nowrap"
                >
                  <div
                    aria-label="ARK Devnet"
                    class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
                    data-testid="NetworkIcon-ARK-ark.devnet"
                  >
                    <div
                      class="css-1i4b0eq"
                      data-testid="NetworkIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="shrink-0 css-8d0u1i"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div>
              <button
                class="mt-8 w-full css-1jhy6v9"
                data-testid="ReceiveFunds__toggle"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Specify Amount
                </div>
              </button>
            </div>
            <div
              class="mx-auto mt-8 h-64 w-64"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFunds should render with a wallet name 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1nnbd55"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Receive Funds
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              <p
                class="mb-4"
              >
                Specify and confirm the amount to request.
              </p>
            </div>
            <div
              data-testid="ReceiveFunds__name"
            >
              <div
                class="no-ligatures css-s5w13h"
                data-testid="TransactionDetail"
              >
                <div
                  class="w-40 flex-1 space-y-2 whitespace-nowrap"
                  data-testid="TransactionDetail--desktop"
                >
                  <div
                    class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    Name
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    My Wallet
                  </div>
                </div>
                <span
                  class="flex-shrink-0"
                >
                  <div
                    aria-label="ARK Devnet"
                    class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
                    data-testid="NetworkIcon-ARK-ark.devnet"
                  >
                    <div
                      class="css-1i4b0eq"
                      data-testid="NetworkIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div
              data-testid="ReceiveFunds__address"
            >
              <div
                class="no-ligatures flex css-s5w13h"
                data-testid="TransactionDetail"
              >
                <div
                  class="w-40 flex-1 space-y-2 whitespace-nowrap"
                  data-testid="TransactionDetail--desktop"
                >
                  <div
                    class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    Address
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <div
                      class="relative flex h-6 grow justify-start"
                    >
                      <div
                        class="absolute flex max-w-full items-center space-x-2 overflow-auto"
                      >
                        <div
                          class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                        >
                          <span
                            class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            abc
                          </span>
                        </div>
                        <span
                          class="flex grow text-theme-primary-300 dark:text-theme-secondary-600"
                        >
                          <button
                            class="ring-focus relative focus:outline-none"
                            data-ring-focus-margin="-m-1"
                            data-testid="clipboard-icon__wrapper"
                            type="button"
                          >
                            <div
                              class="css-v0ob3f"
                              height="16"
                              width="16"
                            >
                              <svg>
                                copy.svg
                              </svg>
                            </div>
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="-space-x-1 whitespace-nowrap"
                >
                  <div
                    class="shrink-0 css-8d0u1i"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                    >
                      <img
                        alt="abc"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                        title="abc"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <button
                class="mt-8 w-full css-1jhy6v9"
                data-testid="ReceiveFunds__toggle"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Specify Amount
                </div>
              </button>
            </div>
            <div
              class="mx-auto mt-8 h-64 w-64"
            >
              <img
                alt="QR Code"
                class="h-64 w-64 rounded-lg border border-theme-secondary-300 p-3 dark:border-theme-secondary-800"
                data-testid="ReceiveFunds__qrcode"
                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAAAklEQVR4AewaftIAAAkFSURBVO3BUW5YSY5FwSNCGzEJc//rIUBuxdP/g8yaeeoHyawb8fHLf/9hoeniKY/kZLp4i0dyM1085ZH8baaLG4/kZLp4yiPZxhCR9QwRWc8QkfUMEVnPEJH1DBFZzxCR9T75B9PFT+SRvGW6eMojOZkuvsIjeWq6OPFIbqaLpzySm+nixCO5mS5OPJKb6eKp6eIn8khODBFZzxCR9QwRWc8QkfUMEVnPEJH1DBFZ75Mv8kjeMF28xSO5mS5OPJKb6eLEI/mK6eIpj+RkurjxSJ6aLm48kpPp4m/kkbxhunjKEJH1DBFZzxCR9QwRWc8QkfUMEVnvE/lfPJLvMF3ceCRv8Ehupou3TBcnHon8dxgisp4hIusZIrKeISLrGSKyniEi6xkist4n8r9MFyceyY1H8pRHcjNdnHgkN9PFiUfylEfyFdOFvM8QkfUMEVnPEJH1DBFZzxCR9QwRWe+TL5ou5L9jurjxSJ7ySN4wXdx4JG+ZLk48ku8yXfw0hoisZ4jIeoaIrGeIyHqGiKxniMh6hois98k/8Ejk/266OPFI3jJd3HgkJ9PFjUdyMl3823gkfxtDRNYzRGQ9Q0TWM0RkPUNE1jNEZD1DRNb7+PMf/Mt4JE9NFzceycl08RUeyVPTxXfwSH6i6eLfxBCR9QwRWc8QkfUMEVnPEJH1DBFZ7+OX//7DxXRx45H8RNPF38Yject0ceKR3EwX38EjuZkuTjySm+nixCP5iaaLpwwRWc8QkfUMEVnPEJH1DBFZzxCR9QwRWe/jl//+w8V08ZRHcjNdfAeP5Ga6eMojOZku/kYeyd9munjKI7mZLp7ySJ6aLm48khNDRNYzRGQ9Q0TWM0RkPUNE1jNEZL2PP//BSzySn2i6eItHcjJdvMUjeWq6eItHcjNdvMEjuZku3uKRnEwXNx7JU9PFiSEi6xkisp4hIusZIrKeISLrGSKyniEi63388t9/uJgu3uKRPDVdPOWR3EwXT3kkT00XNx7JyXTxFo/kO0wXb/FITqaLr/BI3jBdPGWIyHqGiKxniMh6hoisZ4jIeoaIrPc5XXyFR/KG6eLGI3lqunjLdHHikXzFdPEGj+Qt08VTHslT08VbPJK3TBdPeSQnhoisZ4jIeoaIrGeIyHqGiKxniMh6hois9/HLf//hYrp4yiO5mS5+Io/kZLp4yiO5mS5uPJLvMF2ceCRvmS5uPJKT6eIpj+RmunjKI7mZLk48kqcMEVnPEJH1DBFZzxCR9QwRWc8QkfUMEVnvkx/KI3nLdPEWj+Qpj+Sp6eItHsnJdHHjkdxMF09NF095JE95JD/RdHFiiMh6hoisZ4jIeoaIrGeIyHqGiKz3OV3ceCQ308V3mC7eMl28Ybq48Uje4pGcTBc308VT08WNR/LUdPHUdPGUR3IzXZx4JDceycl08ZQhIusZIrKeISLrGSKyniEi6xkisp4hIut9eiRf4ZE85ZGcTBc3HsnNdHHikTw1XfyNposTj+RmujjxSL5iujjxSJ7ySJ6aLr7CIzmZLt7ikZwYIrKeISLrGSKyniEi6xkisp4hIut9/PkPvolHcjJdfIVHcjJdPOWR3EwX38Ej+YmmixuP5A3TxVMeyVdMFyceyVPTxY1HcmKIyHqGiKxniMh6hoisZ4jIeoaIrGeIyHofv/z3Hy6mixuP5Knp4imP5Ga6OPFI/m2mi+/gkbxlunjKI3lqurjxSE6mixuP5Knp4sQQkfUMEVnPEJH1DBFZzxCR9QwRWe9zurjxSJ6aLp7ySG6mi6emixuP5GS6uPFInpou/jYeyU/kkdxMFyceyVs8kqemi6cMEVnPEJH1DBFZzxCR9QwRWc8QkfUMEVnvk38wXdx4JCceyc108ZRHso1H8pbp4sQjuZkunpounvJI3uKRnEwX32W6OPFIbqaLE0NE1jNEZD1DRNYzRGQ9Q0TWM0RkPUNE1vv45b//8AXTxYlHcjNdnHgkN9PFUx7JzXRx4pHcTBcnHsl3mS5OPJKfaLq48UhOposbj+Sp6eIpj+Sp6eLGIzkxRGQ9Q0TWM0RkPUNE1jNEZD1DRNb7+OW//3AxXbzFIzmZLm48kpvp4sQjuZkuTjySt0wXNx7Jd5gu3uKRPDVdnHgk32W6eMojeWq6ODFEZD1DRNYzRGQ9Q0TWM0RkPUNE1jNEZL1PvsgjeYNHcjNd3HgkJ9PFjUdyMl3ceCQn08Vbpou3eCQn08Vbposbj+RkurjxSJ6aLr7DdHHjkZwYIrKeISLrGSKyniEi6xkisp4hIut9/PLff7iYLp7ySL7LdPEGj+RmujjxSG6mi6c8ku8wXfxEHsnfaLp4yiM5MURkPUNE1jNEZD1DRNYzRGQ9Q0TWM0RkvY8//8G/jEfy1HTxFo/kO0wXT3kkN9PFjUdyMl085ZHcTBdv8UhOposbj+QNhoisZ4jIeoaIrGeIyHqGiKxniMh6nx7JRtPFyXRx45E85ZE8NV085ZG8xSM5mS5uPJKb6eIpj+QNHsnNdPETTRcnhoisZ4jIeoaIrGeIyHqGiKxniMh6hois98k/mC5+Io/kKY/kLdPFWzySp6aLp6aLE4/kZrq48Uh+muliG0NE1jNEZD1DRNYzRGQ9Q0TWM0RkPUNE1vvkizySN0wX32W6OPFInpoubjySm+nixCN5yiO5mS5Oposbj+RmujjxSG6mixOP5MYj+Q4eyc10ceKRPGWIyHqGiKxniMh6hoisZ4jIeoaIrPeJ/L9MFzceyVs8kpPp4sYjecoj+Q7TxY1HcjJd3HgkJ9PFjUfyE3kkJ4aIrGeIyHqGiKxniMh6hoisZ4jIeoaIrPeJ/FdNF09NFzceyYlHcjNdfAeP5CmP5Ga6OPFIbqaLE4/kK6aLE4/kxiM5mS6eMkRkPUNE1jNEZD1DRNYzRGQ9Q0TW+/jlv/9wMV38RB7JzXTxlEdyMl3If49H8tR08R08ku8wXTxliMh6hoisZ4jIeoaIrGeIyHqGiKxniMh6H7/89x8Wmi5OPJLvMF18hUfy1HTxBo/kZrp4i0eyzXRx4pHcTBcnhoisZ4jIeoaIrGeIyHqGiKxniMh6/wNT9dbwzRANUQAAAABJRU5ErkJggg=="
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFunds should render without a wallet name 1`] = `
<DocumentFragment>
  <div
    class="overflow-overlay fixed inset-0 z-50 flex w-full overflow-y-auto bg-theme-secondary-900-rgba bg-opacity-60 dark:bg-black-rgba dark:bg-opacity-80 md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="css-1nnbd55"
      tabindex="-1"
    >
      <div
        class="relative flex min-h-full flex-col overflow-hidden bg-theme-background shadow-2xl sm:mb-0 md:h-auto md:rounded-2.5xl px-10 pt-10 pb-24 sm:pb-10"
        data-testid="Modal__inner"
      >
        <div
          class="absolute top-0 right-0 z-10 mt-5 mr-5 rounded bg-theme-primary-100 transition-all duration-100 ease-linear hover:bg-theme-primary-300 dark:bg-theme-secondary-800 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-theme-secondary-400"
        >
          <button
            class="h-11 w-11 css-12xyeiw"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center space-x-2"
            >
              <div
                class="css-v0ob3f"
                height="16"
                width="16"
              >
                <svg>
                  cross.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col space-y-4"
        >
          <h2
            class="mb-0 text-2xl font-bold"
          >
            Receive Funds
          </h2>
          <div
            class="flex flex-1 flex-col"
          >
            <div
              class="whitespace-pre-line text-theme-secondary-text"
            >
              <p
                class="mb-4"
              >
                Specify and confirm the amount to request.
              </p>
            </div>
            <div
              data-testid="ReceiveFunds__address"
            >
              <div
                class="no-ligatures flex css-s5w13h"
                data-testid="TransactionDetail"
              >
                <div
                  class="w-40 flex-1 space-y-2 whitespace-nowrap"
                  data-testid="TransactionDetail--desktop"
                >
                  <div
                    class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                  >
                    Address
                  </div>
                  <div
                    class="flex items-center font-semibold"
                  >
                    <div
                      class="relative flex h-6 grow justify-start"
                    >
                      <div
                        class="absolute flex max-w-full items-center space-x-2 overflow-auto"
                      >
                        <div
                          class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                        >
                          <span
                            class="min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                            data-testid="Address__address"
                          >
                            abc
                          </span>
                        </div>
                        <span
                          class="flex grow text-theme-primary-300 dark:text-theme-secondary-600"
                        >
                          <button
                            class="ring-focus relative focus:outline-none"
                            data-ring-focus-margin="-m-1"
                            data-testid="clipboard-icon__wrapper"
                            type="button"
                          >
                            <div
                              class="css-v0ob3f"
                              height="16"
                              width="16"
                            >
                              <svg>
                                copy.svg
                              </svg>
                            </div>
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="-space-x-1 whitespace-nowrap"
                >
                  <div
                    aria-label="ARK Devnet"
                    class="text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background duration-100 css-14jhlj1"
                    data-testid="NetworkIcon-ARK-ark.devnet"
                  >
                    <div
                      class="css-1i4b0eq"
                      data-testid="NetworkIcon__icon"
                      height="20"
                      width="20"
                    >
                      <svg>
                        ark.svg
                      </svg>
                    </div>
                  </div>
                  <div
                    class="shrink-0 css-8d0u1i"
                    data-testid="Avatar"
                  >
                    <div
                      class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                    >
                      <img
                        alt="abc"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                        title="abc"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <button
                class="mt-8 w-full css-1jhy6v9"
                data-testid="ReceiveFunds__toggle"
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  Specify Amount
                </div>
              </button>
            </div>
            <div
              class="mx-auto mt-8 h-64 w-64"
            >
              <img
                alt="QR Code"
                class="h-64 w-64 rounded-lg border border-theme-secondary-300 p-3 dark:border-theme-secondary-800"
                data-testid="ReceiveFunds__qrcode"
                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPoAAAD6CAYAAACI7Fo9AAAAAklEQVR4AewaftIAAAkFSURBVO3BUW5YSY5FwSNCGzEJc//rIUBuxdP/g8yaeeoHyawb8fHLf/9hoeniKY/kZLp4i0dyM1085ZH8baaLG4/kZLp4yiPZxhCR9QwRWc8QkfUMEVnPEJH1DBFZzxCR9T75B9PFT+SRvGW6eMojOZkuvsIjeWq6OPFIbqaLpzySm+nixCO5mS5OPJKb6eKp6eIn8khODBFZzxCR9QwRWc8QkfUMEVnPEJH1DBFZ75Mv8kjeMF28xSO5mS5OPJKb6eLEI/mK6eIpj+RkurjxSJ6aLm48kpPp4m/kkbxhunjKEJH1DBFZzxCR9QwRWc8QkfUMEVnvE/lfPJLvMF3ceCRv8Ehupou3TBcnHon8dxgisp4hIusZIrKeISLrGSKyniEi6xkist4n8r9MFyceyY1H8pRHcjNdnHgkN9PFiUfylEfyFdOFvM8QkfUMEVnPEJH1DBFZzxCR9QwRWe+TL5ou5L9jurjxSJ7ySN4wXdx4JG+ZLk48ku8yXfw0hoisZ4jIeoaIrGeIyHqGiKxniMh6hois98k/8Ejk/266OPFI3jJd3HgkJ9PFjUdyMl3823gkfxtDRNYzRGQ9Q0TWM0RkPUNE1jNEZD1DRNb7+PMf/Mt4JE9NFzceycl08RUeyVPTxXfwSH6i6eLfxBCR9QwRWc8QkfUMEVnPEJH1DBFZ7+OX//7DxXRx45H8RNPF38Yject0ceKR3EwX38EjuZkuTjySm+nixCP5iaaLpwwRWc8QkfUMEVnPEJH1DBFZzxCR9QwRWe/jl//+w8V08ZRHcjNdfAeP5Ga6eMojOZku/kYeyd9munjKI7mZLp7ySJ6aLm48khNDRNYzRGQ9Q0TWM0RkPUNE1jNEZL2PP//BSzySn2i6eItHcjJdvMUjeWq6eItHcjNdvMEjuZku3uKRnEwXNx7JU9PFiSEi6xkisp4hIusZIrKeISLrGSKyniEi63388t9/uJgu3uKRPDVdPOWR3EwXT3kkT00XNx7JyXTxFo/kO0wXb/FITqaLr/BI3jBdPGWIyHqGiKxniMh6hoisZ4jIeoaIrPc5XXyFR/KG6eLGI3lqunjLdHHikXzFdPEGj+Qt08VTHslT08VbPJK3TBdPeSQnhoisZ4jIeoaIrGeIyHqGiKxniMh6hois9/HLf//hYrp4yiO5mS5+Io/kZLp4yiO5mS5uPJLvMF2ceCRvmS5uPJKT6eIpj+RmunjKI7mZLk48kqcMEVnPEJH1DBFZzxCR9QwRWc8QkfUMEVnvkx/KI3nLdPEWj+Qpj+Sp6eItHsnJdHHjkdxMF09NF095JE95JD/RdHFiiMh6hoisZ4jIeoaIrGeIyHqGiKz3OV3ceCQ308V3mC7eMl28Ybq48Uje4pGcTBc308VT08WNR/LUdPHUdPGUR3IzXZx4JDceycl08ZQhIusZIrKeISLrGSKyniEi6xkisp4hIut9eiRf4ZE85ZGcTBc3HsnNdHHikTw1XfyNposTj+RmujjxSL5iujjxSJ7ySJ6aLr7CIzmZLt7ikZwYIrKeISLrGSKyniEi6xkisp4hIut9/PkPvolHcjJdfIVHcjJdPOWR3EwX38Ej+YmmixuP5A3TxVMeyVdMFyceyVPTxY1HcmKIyHqGiKxniMh6hoisZ4jIeoaIrGeIyHofv/z3Hy6mixuP5Knp4imP5Ga6OPFI/m2mi+/gkbxlunjKI3lqurjxSE6mixuP5Knp4sQQkfUMEVnPEJH1DBFZzxCR9QwRWe9zurjxSJ6aLp7ySG6mi6emixuP5GS6uPFInpou/jYeyU/kkdxMFyceyVs8kqemi6cMEVnPEJH1DBFZzxCR9QwRWc8QkfUMEVnvk38wXdx4JCceyc108ZRHso1H8pbp4sQjuZkunpounvJI3uKRnEwX32W6OPFIbqaLE0NE1jNEZD1DRNYzRGQ9Q0TWM0RkPUNE1vv45b//8AXTxYlHcjNdnHgkN9PFUx7JzXRx4pHcTBcnHsl3mS5OPJKfaLq48UhOposbj+Sp6eIpj+Sp6eLGIzkxRGQ9Q0TWM0RkPUNE1jNEZD1DRNb7+OW//3AxXbzFIzmZLm48kpvp4sQjuZkuTjySt0wXNx7Jd5gu3uKRPDVdnHgk32W6eMojeWq6ODFEZD1DRNYzRGQ9Q0TWM0RkPUNE1jNEZL1PvsgjeYNHcjNd3HgkJ9PFjUdyMl3ceCQn08Vbpou3eCQn08Vbposbj+RkurjxSJ6aLr7DdHHjkZwYIrKeISLrGSKyniEi6xkisp4hIut9/PLff7iYLp7ySL7LdPEGj+RmujjxSG6mi6c8ku8wXfxEHsnfaLp4yiM5MURkPUNE1jNEZD1DRNYzRGQ9Q0TWM0RkvY8//8G/jEfy1HTxFo/kO0wXT3kkN9PFjUdyMl085ZHcTBdv8UhOposbj+QNhoisZ4jIeoaIrGeIyHqGiKxniMh6nx7JRtPFyXRx45E85ZE8NV085ZG8xSM5mS5uPJKb6eIpj+QNHsnNdPETTRcnhoisZ4jIeoaIrGeIyHqGiKxniMh6hois98k/mC5+Io/kKY/kLdPFWzySp6aLp6aLE4/kZrq48Uh+muliG0NE1jNEZD1DRNYzRGQ9Q0TWM0RkPUNE1vvkizySN0wX32W6OPFInpoubjySm+nixCN5yiO5mS5Oposbj+RmujjxSG6mixOP5MYj+Q4eyc10ceKRPGWIyHqGiKxniMh6hoisZ4jIeoaIrPeJ/L9MFzceyVs8kpPp4sYjecoj+Q7TxY1HcjJd3HgkJ9PFjUfyE3kkJ4aIrGeIyHqGiKxniMh6hoisZ4jIeoaIrPeJ/FdNF09NFzceyYlHcjNdfAeP5CmP5Ga6OPFIbqaLE4/kK6aLE4/kxiM5mS6eMkRkPUNE1jNEZD1DRNYzRGQ9Q0TW+/jlv/9wMV38RB7JzXTxlEdyMl3If49H8tR08R08ku8wXTxliMh6hoisZ4jIeoaIrGeIyHqGiKxniMh6H7/89x8Wmi5OPJLvMF18hUfy1HTxBo/kZrp4i0eyzXRx4pHcTBcnhoisZ4jIeoaIrGeIyHqGiKxniMh6/wNT9dbwzRANUQAAAABJRU5ErkJggg=="
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
